--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "angular-resource": "^1.5.5",
-    "angular-local-storage": "^0.2.7"
+    "angular-local-storage": "^0.2.7",
+    "angular-jwt": "^0.0.9"
   }
 }
