--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,9 @@
     "angular-resource": "^1.5.5",
     "angular-local-storage": "^0.2.7",
     "angular-jwt": "^0.0.9",
-    "ionic-toast": "^0.2.0"
+    "ionic-toast": "^0.2.0",
+    "angular-socket-io": "^0.7.0",
+    "socket.io-client": "sio-client#^1.4.4",
+    "angular-sockjs": "^0.1.0"
   }
 }
